<resources>
    <string name="app_name">BangWool</string>
    <string name="title_home">홈</string>
    <string name="title_statistic">통계</string>
    <string name="title_ranking">랭킹</string>
    <string name="title_mypage">마이 페이지</string>
    <string name="title_dummy" />
    <string name="kakao_native_key">c8f5f59798124c1ce6ac1737cf00392b</string>
    <string name="kakao_key">kakaoc8f5f59798124c1ce6ac1737cf00392b</string>

    <!--    태현    -->

    <!--    현희    -->

    <!--    지원    -->

    <!--    현준    -->

</resources>

