<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_statistic"
        android:icon="@drawable/ic_statistic"
        android:title="@string/title_statistic" />

    <item
        android:id="@+id/navigation_dummy"
        android:icon="@null"
        android:enabled="false"
        android:title="@string/title_dummy"/>

    <item
        android:id="@+id/navigation_ranking"
        android:icon="@drawable/ic_ranking"
        android:title="@string/title_ranking"/>

    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/ic_person"
        android:title="@string/title_mypage"/>

</menu>